--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ header h1 {
   height: 100%;
 }
 #black_sec .offer_black .black_img img {
+  max-width: 100%;
   margin-top: -85px;
 }
 #black_sec .offer_black .black_info {
@@ -183,7 +184,7 @@ header h1 {
   color: #fff;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  margin-left: 40px;
+  margin-left: 22px;
 }
 #black_sec .big__black_abs .black_list .casino {
   margin-left: 25px;
@@ -214,7 +215,7 @@ header h1 {
 
 #rememb {
   background: url(../img/4-layers.png) no-repeat 50% 50%/cover;
-  height: 960px;
+  height: 990px;
 }
 #rememb .rememb_container {
   width: 90%;
@@ -263,7 +264,7 @@ header h1 {
 }
 
 #quest {
-  height: 960px;
+  height: 990px;
   background: url(../img/2-layers5.png) no-repeat 50% 50%/cover;
 }
 #quest .quest_container {
@@ -369,7 +370,7 @@ header h1 {
   background: #d22222;
   padding: 15px;
   position: absolute;
-  width: 1500px;
+  width: 100%;
   -webkit-box-shadow: 0 17px 17px rgba(6, 6, 6, 0.67);
           box-shadow: 0 17px 17px rgba(6, 6, 6, 0.67);
 }
@@ -387,6 +388,305 @@ header h1 {
   font-weight: 400;
 }
 
+.mob_menu_ic {
+  display: none;
+}
+.mob_menu_ic i {
+  font-size: 6rem;
+}
+
+.mobil_img {
+  display: none;
+}
+
+@media all and (max-width: 1320px) {
+  #black_sec {
+    padding-top: 30px;
+  }
+  #black_sec .offer_black .black_info {
+    font-size: 2.5rem;
+  }
+  #black_sec .offer_black .black_info p {
+    margin-bottom: 15px;
+  }
+}
+@media all and (max-width: 1305px) {
+  #black_sec .offer_black .black_img {
+    margin-left: -180px;
+  }
+}
+@media all and (max-width: 1295px) {
+  #quest .quest_offer .quest_info {
+    margin-top: 0;
+  }
+  #quest .quest_offer .quest_info ul {
+    margin-top: 30px;
+  }
+}
+@media all and (max-width: 1160px) {
+  #black_sec {
+    padding: 0;
+    padding-top: 50px;
+  }
+  #black_sec .big__black_abs {
+    position: static;
+  }
+
+  .dfgdf {
+    display: block !important;
+  }
+
+  #black_sec .big__black_abs .black_list {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  #black_sec .big__black_abs .black_list .econom_cash:after {
+    display: none;
+  }
+  #black_sec .big__black_abs .black_list .casino p {
+    margin-left: 111px;
+  }
+  #black_sec .big__black_abs .black_list .casino p:before {
+    content: "";
+    margin-bottom: 15px;
+    display: block;
+    width: 70px;
+    height: 2px;
+    background: red;
+  }
+
+  #quest {
+    position: relative;
+  }
+  #quest .quest_offer .quest_right .q_rig_img img {
+    display: none;
+  }
+  #quest .quest_offer .quest_right .times {
+    top: 30px;
+    left: 515px;
+  }
+  #quest .quest_offer .quest_info {
+    width: 85%;
+  }
+  #quest .quest_offer .quest_info ul li {
+    font-size: 2.5rem;
+  }
+}
+#rememb {
+  background-position: 25% 50%;
+}
+
+#quest {
+  background-position: 25% 50%;
+}
+
+@media all and (max-width: 1085px) {
+  header h1 {
+    font-size: 19rem;
+    line-height: 145px;
+  }
+}
+@media all and (max-width: 980px) {
+  #black_sec .offer_black .black_img img {
+    margin-top: 0;
+  }
+  #black_sec .offer_black .black_info p {
+    width: 350px;
+  }
+
+  #quest .quest_offer .quest_right .times {
+    left: 400px;
+  }
+
+  #rememb .rem_block {
+    width: 520px;
+  }
+}
+@media all and (max-width: 890px) {
+  header h1 {
+    font-size: 15rem;
+    line-height: 113px;
+  }
+
+  #black_sec .big__black_abs .black_list .casino p {
+    font-size: 1.8rem;
+  }
+}
+@media all and (max-width: 835px) {
+  #quest .quest_offer .quest_right .times h4 {
+    font-size: 2rem;
+  }
+  #quest .quest_offer .quest_right .times .timer span {
+    font-size: 5rem;
+  }
+}
+@media all and (max-width: 800px) {
+  .desc_img {
+    display: none;
+  }
+
+  .mobil_img {
+    display: block;
+    margin-left: 100px;
+    margin-top: -32px !important;
+  }
+}
+#black_sec {
+  padding-top: 0;
+}
+
+@media all and (max-width: 765px) {
+  #black_sec .big__black_abs .black_list .image_prev .fonts_image img {
+    width: 30px;
+  }
+  #black_sec .big__black_abs .black_list .econom_cash .money_img img {
+    width: 50px;
+  }
+  #black_sec .big__black_abs .black_list .casino p {
+    margin-left: 50px;
+  }
+}
+@media all and (max-width: 765px) {
+  #quest .quest_offer .quest_right .times {
+    left: 325px;
+  }
+}
+@media all and (max-width: 740px) {
+  .top_line nav ul {
+    display: none;
+  }
+  .top_line nav ul li {
+    float: none;
+    display: block;
+  }
+  .top_line nav .mob_menu_ic {
+    display: block;
+  }
+}
+@media all and (max-width: 695px) {
+  .mobil_img {
+    margin-left: 60px;
+  }
+
+  header h1 {
+    font-size: 10rem;
+    line-height: 75px;
+    letter-spacing: -12px;
+  }
+}
+@media all and (max-width: 650px) {
+  #rememb .rem_block {
+    width: 90%;
+    margin: 0 auto;
+    float: none;
+    padding-top: 170px;
+  }
+
+  #black_sec .offer_black .black_info {
+    font-size: 2rem;
+  }
+  #black_sec .offer_black .black_info p {
+    width: 250px;
+  }
+}
+@media all and (max-width: 590px) {
+  #black_sec .offer_black .black_info {
+    font-size: 1.5rem;
+  }
+}
+@media all and (max-width: 570px) {
+  #quest {
+    height: auto;
+    padding-bottom: 100px;
+    background-position: 27.2% 50%;
+    background: none;
+  }
+  #quest .quest_offer {
+    display: block;
+  }
+  #quest .quest_offer .quest_right .times {
+    margin-top: 50px;
+    position: static;
+  }
+}
+@media all and (max-width: 520px) {
+  #quest .quest_offer .quest_info {
+    width: 90%;
+    margin: 0 auto;
+  }
+  #quest .quest_offer .quest_info h2 {
+    font-size: 6rem;
+  }
+  #quest .quest_offer .quest_info ul li {
+    font-size: 2rem;
+  }
+  #quest .quest_offer .quest_info ul p {
+    font-size: 2rem;
+  }
+
+  #rememb .rem_block p {
+    font-size: 2.7rem;
+  }
+
+  #black_sec .big__black_abs .black_list {
+    display: block;
+  }
+  #black_sec .big__black_abs .black_list .image_prev {
+    margin-top: 30px;
+  }
+  #black_sec .big__black_abs .econom_cash p {
+    margin-bottom: 20px;
+  }
+}
+@media all and (max-width: 480px) {
+  #black_sec {
+    padding: 50px 0px;
+  }
+  #black_sec .offer_black {
+    display: block;
+  }
+  #black_sec .offer_black .black_img img {
+    display: none;
+  }
+  #black_sec .offer_black .black_info p {
+    width: 90%;
+  }
+
+  header h1 {
+    font-size: 7rem;
+    line-height: 53px;
+    letter-spacing: -6px;
+  }
+  header h3 {
+    font-size: 3.5rem;
+  }
+}
+@media all and (max-width: 380px) {
+  #rememb .rem_block h2 {
+    font-size: 5.7rem;
+    background: none;
+  }
+  #rememb .rem_block h2:before {
+    left: 200px;
+  }
+  #rememb .rem_block h2:after {
+    left: 250px;
+  }
+}
+@media all and (max-width: 360px) {
+  #quest .quest_offer .quest_info h2 {
+    background: none;
+  }
+
+  header h1 {
+    font-size: 4.5rem;
+    line-height: 32px;
+  }
+  header h3 {
+    font-size: 2.5rem;
+  }
+}
 .footer_container {
   padding-bottom: 20px;
   padding-top: 75px;
