--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,12 +2,17 @@
 	font-family: "LatoRegular"
 	src: url("../fonts/LatoRegular.eot")
 	src: url("../fonts/LatoRegular.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoRegular.woff") format("woff"), url("../fonts/LatoRegular.ttf") format("truetype")
-	font-style: normal
+	font-style: normal2
 	font-weight: normal
 @font-face
 	font-family: "LatoBold"
 	src: url("../fonts/LatoBold.eot")
 	src: url("../fonts/LatoBold.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoBold.woff") format("woff"), url("../fonts/LatoBold.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
+@font-face
+	font-family: "Lato - Thin"
+	src: url("../fonts/Lato-Thin.ttf")
 	font-style: normal
 	font-weight: normal
 html
@@ -202,9 +207,9 @@ header
 		line-height: 1
 		h2
 			color: #333333
-			font-family: "Lato - Black"
+			font-family: 'Lato', sans-serif
+			font-weight: 900
 			font-size: 67px
-			font-weight: 400
 			margin-bottom: 23px
 			span
 				color: #ff0000
@@ -212,7 +217,7 @@ header
 			color: #333333
 			font-family: "Lato - Thin"
 			font-size: 17px
-			font-weight: 400
+			font-weight: 100
 			margin-bottom: 23px
 		.footer_icons
 			display: flex
@@ -254,9 +259,9 @@ header
 				li
 					display: inline-block
 					color: #ffffff
-					font-family: "Lato - Black"
+					font-family: 'Lato', sans-serif
+					font-weight: 900
 					font-size: 42px
-					font-weight: 400
 					margin-right: 70px
 .revies
 	.revies_container
@@ -280,11 +285,12 @@ header
 			.revies_text_title
 				display: flex
 				align-items: center
+				position: relative
 				h2
 					color: #ffffff
-					font-family: "Lato - Black"
+					font-family: 'Lato', sans-serif
+					font-weight: 900
 					font-size: 75px
-					font-weight: 400
 					position: relative
 				.red_line
 					width: 130px
@@ -294,11 +300,22 @@ header
 					margin-left: 20px
 					// position: absolute
 					z-index: 9999999999
+				span
+					font-family: 'Lato', sans-serif
+					font-weight: 900
+					font-size: 250px
+					line-height: 49.99px
+					position: absolute
+					color: #3e3e3e
+					top: 100%
+					left: 0%
+					letter-spacing: -30px
 			p
 				color: #ffffff
-				font-family: "Lato - Black"
+				font-family: 'Lato', sans-serif
+				font-weight: 900
 				font-size: 42px
-				font-weight: 400
+				z-index: 999999999
 		.slider
 			padding: 60px 0
 			width: 100%
@@ -324,24 +341,41 @@ header
 .feedback
 	background-image: url(../img/casino.png)
 	background-position: 7% 0%
+	padding-top: 90px
 	.feedback_container
 		width: 90%
 		max-width: 1520px
 		margin: 0 auto
-		h2
-			color: #333333
-			font-family: "Lato - Black"
-			font-size: 75px
-			font-weight: 400
-			margin-bottom: 70px
+		.wrapper_feedback
+			position: relative
+			z-index: 9999999999999
+			h2
+				color: #333333
+				font-family: 'Lato', sans-serif
+				font-weight: 900
+				font-size: 75px
+				margin-bottom: 70px
+				z-index: 9999999999999999
+			span
+				color: #eaeaea
+				font-family: 'Lato', sans-serif
+				font-weight: 900
+				font-size: 300px
+				line-height: 49.99px
+				letter-spacing: -30px
+				position: absolute
+				top: 30%
+				left: 0%
+				z-index: -1
 		.red_line
 			width: 130px
 			height: 3px
 			background-color: #d22222
 			margin-bottom: 50px
+			z-index: 99999999
 		p
 			color: #535353
-			font-family: Lato
+			font-family: 'Lato'
 			font-size: 37px
 			font-weight: 400
 			line-height: 50px
@@ -349,9 +383,9 @@ header
 		.feedback_form
 			label
 				color: #333333
-				font-family: "Lato - Black"
+				font-family: 'Lato', sans-serif
+				font-weight: 900
 				font-size: 37px
-				font-weight: 400
 				line-height: 50px
 				display: block
 				margin-bottom: 30px
@@ -363,6 +397,11 @@ header
 				margin-bottom: 90px
 				padding-left: 20px
 				outline: none
+				color: #333333
+				font-family: 'Lato'
+				font-size: 37px
+				font-weight: 400
+				line-height: 50px
 			input[type=submit]
 				width: 314px
 				height: 64px
@@ -371,9 +410,9 @@ header
 				color: #ffffff
 				background-color: #ff0000
 				border: 2px solid #ff0000
-				font-family: "Lato - Black"
+				font-family: 'Lato', sans-serif
+				font-weight: 900
 				font-size: 37px
-				font-weight: 400
 				line-height: 50px
 				cursor: pointer
 				margin-bottom: 50px
@@ -392,9 +431,9 @@ header
 					background-color: #ffffff
 					border: 2px solid #ff0000
 					color: #ff0000
-					font-family: "Lato - Black"
+					font-family: 'Lato', sans-serif
+					font-weight: 900
 					font-size: 42px
-					font-weight: 400
 					line-height: 50px
 					margin-left: 30px
 					cursor: pointer
@@ -484,6 +523,8 @@ header
 			p
 				font-size: 27px
 				margin-bottom: 55px
+			span
+				font-size: 180px
 			.feedback_form
 				label
 					font-size: 27px
@@ -512,6 +553,8 @@ header
 				.revies_text_title
 					h2
 						font-size: 40px
+					span
+						font-size: 180px
 				p
 					font-size: 22px
 			.slider
