--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ header h1 {
 }
 #black_sec .offer_black .black_img img {
   max-width: 100%;
-  margin-top: -50px;
+  margin-top: -30px;
+  margin-left: 40px;
 }
 #black_sec .offer_black .black_info {
   font-size: 2.9rem;
