--- a/sass/style.sass
+++ b/sass/style.sass
@@ -110,7 +110,8 @@ header
 				// // top: -100px
 				// left: 0
 				// bottom: 0
-				margin-top: -50px
+				margin-top: -30px
+				margin-left: 40px
 				// height: 100%
 				// width: auto
 				// overflow: hidden
