--- a/css/style.css
+++ b/css/style.css
@@ -397,12 +397,23 @@ header h1 {
 
 .mob_menu_ic {
   display: none;
+  position: absolute;
+  right: 20px;
+  z-index: 9999;
 }
 .mob_menu_ic i {
   font-size: 6rem;
 }
 
 .mobil_img {
+  display: none;
+}
+
+.whites {
+  color: #fff !important;
+}
+
+.dnone {
   display: none;
 }
 
@@ -560,14 +571,31 @@ header h1 {
   }
 }
 @media all and (max-width: 740px) {
-  .top_line nav ul {
+  header .top_line nav ul {
     display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 9;
+    background: rgba(0, 0, 0, 0.9);
   }
-  .top_line nav ul li {
+  header .top_line nav ul li {
     float: none;
     display: block;
+    text-align: center;
+    margin-top: 20px;
   }
-  .top_line nav .mob_menu_ic {
+  header .top_line nav ul li a {
+    color: #fff;
+  }
+  header .top_line nav ul li span {
+    display: none;
+  }
+  header .top_line nav .mob_menu_ic {
     display: block;
   }
 }
