--- a/sass/style.sass
+++ b/sass/style.sass
@@ -340,11 +340,17 @@ header
 
 .mob_menu_ic
 	display: none
+	position: absolute
+	right: 20px
+	z-index: 9999
 	i
 		font-size: 6rem
 .mobil_img
 	display: none
-
+.whites
+	color: #fff!important
+.dnone
+	display: none
 // -------------------MEDIA---------VLa
 @media all and (max-width:1320px)
 	#black_sec
@@ -492,16 +498,34 @@ header
 				.times
 					left: 325px
 @media all and (max-width:740px)
-	.top_line
-		nav
-			ul
-				display: none
-				li
-					float: none
-					display: block
+	header
+		.top_line
+			nav
+				ul
+					display: none
+					position: fixed
+					width: 100%
+					height: 100%
+					top: 0px
+					right: 0
+					left: 0
+					bottom: 0
+					z-index: 9
+					background: rgba(0, 0, 0, .9)
+					
+					li
+						float: none
+						display: block
+						text-align: center
+						margin-top: 20px
+						a
+							color: #fff
+						span
+							display: none
+							
 
-			.mob_menu_ic
-				display: block
+				.mob_menu_ic
+					display: block
 @media all and (max-width:695px)
 	.mobil_img
 		margin-left: 60px
