--- a/sass/style.sass
+++ b/sass/style.sass
@@ -322,8 +322,12 @@ header
 			.q_rig_img
 				// z-index: 0
 				img
-					margin-bottom: -2px
+					margin-bottom: -4px
 					margin-left: 10px
+					// position: absolute
+					position: relative
+					
+					
 					// z-index: 0
 			.times
 				background: #d22222
