--- a/sass/style.sass
+++ b/sass/style.sass
@@ -147,27 +147,32 @@ header
 			.econom_cash
 				display: flex
 				align-items: center
-				&:after
-					content: ""
-					height: 70px
-					width: 1px
-					background: #d22222
-					margin-left: 30px
 				p
 					font-size: 3.3rem
 					color: #fff
 					font-family: 'Lato', sans-serif
 					font-weight: 400
 					margin-left: 22px
-
+				.econom_cash_wrapper
+					display: flex
+					align-items: center
 			.casino
 				margin-left: 25px
+				display: flex
+				align-items: center
 				p
 					color: #ffffff
 					font-family: 'Lato', sans-serif
 					font-size: 2.5rem
 					font-weight: 300
 					max-width: 430px
+				&::before
+					content: ""
+					display: block
+					height: 70px
+					width: 1px
+					background: #d22222
+					margin-left: 30px
 			.image_prev
 				display: flex
 				justify-content: space-between
@@ -273,7 +278,7 @@ header
 				display: block
 				margin-left: 10px
 				margin-top: 90px
-				transition: 0.1s
+				transition: 0.3s
 				li
 					font-size: 3.5rem
 					color: #333
@@ -281,15 +286,17 @@ header
 					font-weight: 400
 					margin-top: 30px
 					display: block
-					transition: 1s
+					transition: 0.3s
 					cursor: pointer
+					&:hover
+						color: #d22222
 				.inf_secq
 					// display: flex
 					color: #d22222
 					border-left: 2px solid #d22222
 					padding-left: 10px
 					margin-left: -10px
-					transition: 0.1s
+					transition: 0.3s
 				.quest_text
 					font-size: 2.9rem
 					color: #535353
@@ -300,7 +307,7 @@ header
 					margin: 45px 0px
 					align-items: flex-start
 					// margin-left: 50px
-					transition: 0.1s
+					transition: 0.3s
 					display: flex
 					&:before
 						content: " "
@@ -802,6 +809,8 @@ header
 .feedback
 	background-image: url(../img/casino.png)
 	background-position: 7% 0%
+	background-repeat: no-repeat
+	background-size: 150% 100%
 	padding-top: 70px
 	box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35)
 	.feedback_container
