--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,57 @@ header h1 {
   padding-left: 15px;
 }
 
+.hd_lists {
+  font-size: 3.3rem;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  margin-left: 22px;
+}
+
+.econ_pers, .econom_pers_wrapper, .econ_coin, .econom_coin_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.econ_clock {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.econom_clock_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.econom_clock_wrapper {
+  display: none;
+}
+
+.econom_pers_wrapper {
+  display: none;
+}
+
+.econom_coin_wrapper {
+  display: none;
+}
+
+.disnone {
+  display: none;
+}
+
 #rememb {
   background: url(../img/4-layers.png) no-repeat 50% 50%/cover;
   height: 990px;
