--- a/sass/style.sass
+++ b/sass/style.sass
@@ -183,6 +183,32 @@ header
 					border-left: 1px solid #d22222
 					margin-left: 15px
 					padding-left: 15px
+.hd_lists
+	font-size: 3.3rem
+	color: #fff
+	font-family: 'Lato', sans-serif
+	font-weight: 400
+	margin-left: 22px
+	// float: left
+
+.econ_pers,.econom_pers_wrapper,.econ_coin,.econom_coin_wrapper
+	display: flex
+	align-items: center
+.econ_clock
+	display: flex
+	align-items: center
+.econom_clock_wrapper
+	display: flex
+	align-items: center
+.econom_clock_wrapper
+	display: none
+.econom_pers_wrapper
+	display: none
+
+.econom_coin_wrapper
+	display: none
+.disnone
+	display: none
 #rememb
 	background: url(../img/4-layers.png) no-repeat 50% 50%/cover
 	height: 990px
