--- a/sass/style.sass
+++ b/sass/style.sass
@@ -175,6 +175,8 @@ header
 					width: 1px
 					background: #d22222
 					margin-left: 30px
+					display: none
+					
 			.image_prev
 				display: flex
 				justify-content: space-between
@@ -630,6 +632,14 @@ header
 				ul
 					p
 						font-size: 2rem
+	#black_sec
+		.big__black_abs
+			.black_list
+				.image_prev
+					flex-direction: column
+					align-items: flex-start
+				.casino
+					margin-left: 0
 	#rememb
 		.rem_block
 			p
