--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ header h1 {
   width: 1px;
   background: #d22222;
   margin-left: 30px;
+  display: none;
 }
 #black_sec .big__black_abs .black_list .image_prev {
   display: -webkit-box;
@@ -748,6 +749,19 @@ header h1 {
   }
   #quest .quest_offer .quest_info ul p {
     font-size: 2rem;
+  }
+
+  #black_sec .big__black_abs .black_list .image_prev {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  #black_sec .big__black_abs .black_list .casino {
+    margin-left: 0;
   }
 
   #rememb .rem_block p {
