--- a/sass/style.sass
+++ b/sass/style.sass
@@ -211,6 +211,10 @@ header
 	display: none
 .disnone
 	display: none
+.fonts_image
+	cursor: pointer	
+.money_img
+	cursor: pointer
 #rememb
 	background: url(../img/4-layers.png) no-repeat 50% 50%/cover
 	height: 990px
@@ -535,6 +539,7 @@ header
 							width: 40px
 				.econom_cash
 					.money_img
+
 						img
 							width: 50px
 				.casino
