--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,12 @@ header h1 {
   margin-left: 22px;
 }
 
+.hd_seclis {
+  float: left;
+  margin-top: 25px;
+  margin-right: 25px;
+}
+
 .econ_pers, .econom_pers_wrapper, .econ_coin, .econom_coin_wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -648,11 +654,33 @@ header h1 {
     margin-left: 100px;
     margin-top: -32px !important;
   }
-}
-#black_sec {
-  padding-top: 0;
-}
 
+  #black_sec {
+    padding-top: 0;
+  }
+
+  .hd_seclis {
+    float: none;
+  }
+
+  #black_sec .big__black_abs .black_list .casino p {
+    margin-left: 0;
+  }
+
+  #black_sec .big__black_abs .black_list .econom_cash .econom_cash_wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .hd_seclis {
+    margin-top: 0;
+  }
+}
 @media all and (max-width: 765px) {
   #black_sec .big__black_abs .black_list .image_prev .fonts_image img {
     width: 40px;
@@ -784,6 +812,10 @@ header h1 {
   }
   #black_sec .big__black_abs .econom_cash p {
     margin-bottom: 20px;
+  }
+
+  #black_sec .big__black_abs .black_list .econom_cash .money_img img {
+    margin-left: 25px;
   }
 }
 @media all and (max-width: 480px) {
