--- a/sass/style.sass
+++ b/sass/style.sass
@@ -894,8 +894,9 @@ header
 	margin: 0 50px
 .feedback
 	background-image: url(../img/casino.png)
-	background-position: 7% 0%
+	background-position: 7% 50%
 	background-repeat: no-repeat
+	background-attachment: fixed
 	// background-size: 150% 100%
 	padding-top: 70px
 	box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35)
