--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ html {
   overflow-x: hidden; }
 
 body {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  position: relative; }
 
 .clearfix::after {
   content: "";
@@ -805,7 +806,7 @@ header {
     top: 0%;
     left: 0%;
     height: 100%;
-    z-index: 99999999999;
+    z-index: 1;
     background-image: url(../img/antonsuka2.png);
     background-repeat: no-repeat;
     background-position: top right; }
@@ -936,7 +937,7 @@ header {
       font-size: 37px;
       font-weight: 400;
       line-height: 50px; }
-    .feedback .feedback_container .feedback_form input[type=submit] {
+    .feedback .feedback_container .feedback_form input[type=button] {
       width: 314px;
       height: 64px;
       border: none;
@@ -950,7 +951,7 @@ header {
       line-height: 50px;
       cursor: pointer;
       margin-bottom: 50px; }
-    .feedback .feedback_container .feedback_form input[type=submit]:hover {
+    .feedback .feedback_container .feedback_form input[type=button]:hover {
       color: #ff0000;
       background-color: #ffffff; }
     .feedback .feedback_container .feedback_form .choose_sex {
@@ -988,6 +989,47 @@ header {
         color: #ffffff;
         color: #ffffff; }
 
+.modal_feedback {
+  position: fixed;
+  display: none;
+  top: 10%;
+  left: 50%;
+  background-color: white;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 99999999999999999999; }
+  .modal_feedback .modal_feedback_item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .modal_feedback .modal_feedback_item img {
+      height: 33%;
+      width: 33%;
+      padding: 20px; }
+    .modal_feedback .modal_feedback_item a {
+      text-decoration: none;
+      color: black;
+      font-family: 'Lato', sans-serif;
+      font-weight: 900;
+      font-size: 150px;
+      line-height: 49.99px;
+      color: #3e3e3e; }
+
+#overlay {
+  display: none;
+  position: fixed;
+  background-color: black;
+  opacity: 0.9;
+  overflow: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100vh;
+  z-index: 999999999999999999999999999999999999999; }
+
 @media (max-width: 3000px) and (min-width: 1480px) {
   .revies .revies_container .revies_text {
     background-size: 100%; } }
@@ -1022,6 +1064,11 @@ header {
     margin: 0 20px; } }
 
 @media all and (max-width: 1150px) {
+  .modal_feedback .modal_feedback_item a {
+    font-size: 100px; }
+  .modal_feedback .modal_feedback_item img {
+    width: 200px;
+    height: auto; }
   .revies {
     padding-top: 200px;
     position: relative; }
@@ -1089,6 +1136,17 @@ header {
     height: auto; } }
 
 @media all and (max-width: 500px) {
+  .modal_feedback {
+    height: 80%;
+    overflow-y: scroll;
+    top: 5%; }
+    .modal_feedback .modal_feedback_item {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+      .modal_feedback .modal_feedback_item a {
+        font-size: 50px; }
   footer .footer_container .footer_logo {
     width: 100%; }
   footer .footer_container .footer_text {
