--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,6 +20,7 @@ html
 	overflow-x: hidden
 body
 	overflow-x: hidden
+	position: relative
 .clearfix::after
 	content: ""
 	display: table
@@ -829,7 +830,7 @@ header
 			top: 0%
 			left: 0%
 			height: 100%
-			z-index: 99999999999
+			z-index: 1
 			// clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%)
 			background-image: url(../img/antonsuka2.png)
 			background-repeat: no-repeat
@@ -959,7 +960,7 @@ header
 				font-size: 37px
 				font-weight: 400
 				line-height: 50px
-			input[type=submit]
+			input[type=button]
 				width: 314px
 				height: 64px
 				border: none
@@ -973,7 +974,7 @@ header
 				line-height: 50px
 				cursor: pointer
 				margin-bottom: 50px
-			input[type=submit]:hover
+			input[type=button]:hover
 				color: #ff0000
 				background-color: #ffffff
 			.choose_sex
@@ -1005,6 +1006,41 @@ header
 					color: #ffffff
 
 					color: #ffffff
+.modal_feedback
+	position: fixed
+	display: none
+	// width: 50%
+	top: 10%
+	left: 50%
+	background-color: white
+	transform: translateX(-50%)
+	z-index: 99999999999999999999
+	.modal_feedback_item
+		display: flex
+		align-items: center
+		img
+			height: 33%
+			width: 33%
+			padding: 20px
+		a
+			text-decoration: none
+			color: black
+			font-family: 'Lato', sans-serif
+			font-weight: 900
+			font-size: 150px
+			line-height: 49.99px
+			color: #3e3e3e
+
+#overlay
+	display: none
+	position: fixed
+	background-color: black
+	opacity: 0.9
+	overflow: hidden
+	overflow-y: hidden
+	width: 100%
+	height: 100vh
+	z-index: 999999999999999999999999999999999999999
 @media (max-width: 3000px) and (min-width:1480px)
 	.revies
 		.revies_container
@@ -1047,6 +1083,13 @@ header
 	.slick-slide
 		margin: 0 20px
 @media all and (max-width:1150px)
+	.modal_feedback
+		.modal_feedback_item
+			a
+				font-size: 100px
+			img
+				width: 200px
+				height: auto
 	.revies
 		padding-top: 200px
 		position: relative
@@ -1123,6 +1166,15 @@ header
 						width: 320px
 						height: auto
 @media all and (max-width:500px)
+	.modal_feedback
+		height: 80%
+		overflow-y: scroll
+		top: 5%
+		.modal_feedback_item
+			flex-direction: column
+			a
+				// padding-bottom: 20px
+				font-size: 50px
 	footer
 		.footer_container
 			.footer_logo
