--- a/sass/style.sass
+++ b/sass/style.sass
@@ -221,6 +221,13 @@ header
 .money_img
 	cursor: pointer
 #rememb
+	&:hover 
+		background: url(../img/color_re.png) no-repeat 24.4% 50%/cover
+@media all and (max-width:800px)
+	#rememb
+		&:hover 
+			background: url(../img/color_re.png) no-repeat 24.5% 50%/cover
+#rememb
 	background: url(../img/4-layers.png) no-repeat 50% 50%/cover
 	height: 990px
 	// padding-top: 170px
@@ -237,6 +244,7 @@ header
 			opacity: 0.5
 			height: 100%
 			background-image: linear-gradient(-268deg, rgba(255, 255, 255, 0.5) 0%, #ffffff 100%)
+
 	.rem_block
 		width: 600px
 		float: right
@@ -485,7 +493,7 @@ header
 					li
 						font-size: 2.5rem
 #rememb
-	background-position: 25% 50%
+	background-position: 25.2% 50%
 #quest
 	background-position: 25% 50%
 
