--- a/sass/style.sass
+++ b/sass/style.sass
@@ -223,13 +223,13 @@ header
 	cursor: pointer
 #rememb
 	&:hover 
-		background: url(../img/color_re.png) no-repeat 24.4% 50%/cover
+		background: url(../img/5-layersfinwww.png) no-repeat 24.8% 50%/cover
 @media all and (max-width:800px)
 	#rememb
 		&:hover 
 			background: url(../img/color_re.png) no-repeat 24.5% 50%/cover
 #rememb
-	background: url(../img/4-layers.png) no-repeat 50% 50%/cover
+	background: url(../img/4-layers.png) no-repeat 48% 50%/cover
 	height: 990px
 	// padding-top: 170px
 	position: relative
